Стек и очереди реализованы с помощью моего LinkedList